syntax = "proto3";

package neurun;

option go_package = "github.com/luis12loureiro/neurun/apps/workflow/gen";

import "google/protobuf/duration.proto";

enum TaskType {
  TASK_TYPE_UNSPECIFIED = 0;
  TASK_TYPE_LOG = 1;
  TASK_TYPE_HTTP = 2;
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_RUNNING = 2;
  TASK_STATUS_COMPLETED = 3;
  TASK_STATUS_FAILED = 4;
}

message CreateTaskRequest {
  string name = 1;
  TaskType type = 2;
  uint32 retries = 3;
  google.protobuf.Duration retryDelay = 4;
  optional string condition = 5;
  oneof payload {
    LogPayload logPayload = 6;
    HTTPPayload httpPayload = 7;
  }
  repeated CreateTaskRequest next = 8;
}

message Task {
  optional string id = 1;
  string name = 2;
  TaskType type = 3;
  TaskStatus status = 4;
  uint32 retries = 5;
  google.protobuf.Duration retryDelay = 6;
  optional string condition = 7;
  oneof payload {
    LogPayload logPayload = 8;
    HTTPPayload httpPayload = 9;
  }
  repeated Task next = 10;
}

message LogPayload {
  string message = 1;
}

message HTTPPayload {
  string url = 1;
  string method = 2;
  bytes body = 3;
  map<string, string> headers = 4;
  map<string, string> queryParams = 5;
  google.protobuf.Duration timeout = 6;
  HTTPAuth auth = 7;
  bool followRedirects = 8;
  bool verifySSL = 9;
  int32 expectedStatusCode = 10;
}

message HTTPAuth {
  oneof auth_type {
    HTTPBasicAuth basic = 1;
    HTTPBearerAuth bearer = 2;
    HTTPApiKeyAuth apiKey = 3;
  }
}

message HTTPBasicAuth {
  string username = 1;
  string password = 2;
}

message HTTPBearerAuth {
  string token = 1;
}

message HTTPApiKeyAuth {
  string key = 1;
  string value = 2;
  HTTPApiKeyLocation location = 3;
}

enum HTTPApiKeyLocation {
  HTTP_API_KEY_LOCATION_UNSPECIFIED = 0;
  HTTP_API_KEY_LOCATION_HEADER = 1;
  HTTP_API_KEY_LOCATION_QUERY = 2;
}


